# emagedoc.github.io

./: CNAME  Makefile  README.md  index.html  pyproject.toml  server.py
.github/workflows/: deploy.yaml
arenas/: index.html
arenas/battlesnake/: index.html
arenas/corewar/: index.html
arenas/halite/: index.html
arenas/poker/: index.html
arenas/robocode/: index.html
arenas/robotrumble/: index.html
data/: leaderboards.json  team.json
example/: index.html
insights/: index.html
insights/20251103_release/: index.html
insights/20251105_human_ai/: index.html
pages/: 20251104_release.md
pages/arenas/: battlesnake.md  corewar.md  halite.md  poker.md  robocode.md  robotrumble.md
pages/insights/: 20251103_release.md  20251104_elo.md  20251104_release.md  20251105_human_ai.md  20251106_elo.md  20251108_human_ai.md
static/css/: core.css  homepage.css  layout.css  main.css
static/css/anta/: anta.css
static/css/inter/: inter.css
static/css/jersey/: jersey.css
team/: index.html
templates/: _full_leaderboard_modal.html  _leaderboard.html  _topnav.html  about.html  arena.html  arenas.html  base.html  index.html  insights.html  page.html  team.html
