[project]
name = "codeclash-website"
readme = "README.md"
version = "0"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
    "flask>=3.0.3",
    "flask-flatpages>=0.8.3",
    "frozen-flask>=1.0.2",
    "jinja2>=3.0.0",
    "markdown>=3.7",
    "urllib3>=2.2.3",
    "werkzeug>=3.0.6",
]
